--- a/.gitignore
+++ b/.gitignore
@@ -29,14 +29,24 @@ db.sqlite3-journal
 media/
 staticfiles/
 
-# PyEnv
-.python-version
-
-# Virtual environments
+# Virtual Environment
+.venv/
 venv/
 ENV/
 env/
-.venv/
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn-integrity
+
+# Vue.js / Vite
+dist/
+.vite/
+.cache/
 
 # IDE
 .vscode/
@@ -44,6 +54,13 @@ env/
 *.swp
 *.swo
 *~
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # OS
 .DS_Store
@@ -53,24 +70,3 @@ env/
 .Trashes
 ehthumbs.db
 Thumbs.db
-
-# PyPerf data
-perf_data/
-*.pyperfc
-
-# Environment variables
-.env
-.env.local
-.env.production
-
-# Testing
-.coverage
-htmlcov/
-.pytest_cache/
-.tox/
-
-# MyPy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-CLAUDE.md
