--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ boto3
 # Django web framework dependencies
 Django>=4.2.0
 djangorestframework>=3.14.0
+channels>=4.0.0
+channels-redis>=4.1.0
 
 # Development dependencies (optional)
 # Install with: pip install -r requirements-dev.txt
